# svnCurses

./: .ccls  CMakeLists.txt  build.sh
dependecies/apr/: Makefile  apr-1-config  apr-config.out  apr.pc  config.nice  config.status  exports.c  libtool
dependecies/apr/.libs/: libapr-1.so.0.7.0
dependecies/apr/test/: Makefile  abts.lo  echod  echod.lo  globalmutexchild  globalmutexchild.lo  libmod_test.la  mod_test.la  mod_test.lo  occhild  occhild.lo  proc_child  proc_child.lo  readchild  readchild.lo  sendfile  sendfile.lo  sockchild  sockchild.lo  sockperf  sockperf.lo  testall  testargs.lo  testatomic.lo  testcond.lo  testdir.lo  testdup.lo  testencode.lo  testenv.lo  testescape.lo  testfile.lo  testfilecopy.lo  testfileinfo.lo  testflock.lo  testfmt.lo  testfnmatch.lo  testglobalmutex.lo  testhash.lo  testipsub.lo  testlfs.lo  (+36 more)
dependecies/apr/test/.libs/: libmod_test.lai  mod_test.lai
dependecies/apr/test/internal/: Makefile
dependecies/apr/tools/: gen_test_char
dependecies/subversion/: CHANGES  INSTALL  Makefile  NOTICE  build-outputs.mk  config.nice  config.status  configure  configure.ac  libtool  win-tests.py
dependecies/subversion/subversion/: svn_private_config.h  svn_private_config.h.in
dependecies/subversion/subversion/libsvn_auth_gnome_keyring/: libsvn_auth_gnome_keyring.pc  libsvn_auth_gnome_keyring.pc.in
dependecies/subversion/subversion/libsvn_auth_kwallet/: libsvn_auth_kwallet.pc  libsvn_auth_kwallet.pc.in
dependecies/subversion/subversion/libsvn_client/: add.lo  blame.lo  cat.lo  changelist.lo  checkout.lo  cleanup.lo  cmdline.lo  commit.lo  commit_util.lo  compat_providers.lo  conflicts.lo  copy.lo  ctx.lo  delete.lo  deprecated.lo  diff.lo  diff_local.lo  diff_summarize.lo  export.lo  externals.lo  import.lo  info.lo  iprops.lo  layout.lo  libsvn_client-1.la  libsvn_client.pc  libsvn_client.pc.in  list.lo  locking_commands.lo  log.lo  merge.lo  merge_elements.lo  mergeinfo.lo  mtcc.lo  patch.lo  prop_commands.lo  ra.lo  relocate.lo  repos_diff.lo  resolved.lo  (+12 more)
dependecies/subversion/subversion/libsvn_delta/: branch.lo  branch_compat.lo  branch_migrate.lo  branch_nested.lo  branch_repos.lo  cancel.lo  compat.lo  compose_delta.lo  debug_editor.lo  default_editor.lo  deprecated.lo  editor.lo  (+10 more)
src/: state.cpp  state.h  svn_api.cpp  svn_api.h  svn_curses.cpp  svn_curses.h
(+689 files in other folders)
